--- a/HTML5/index-2.html
+++ b/HTML5/index-2.html
@@ -18,7 +18,88 @@
        <li>sdsd</li>
        <li>sdsd</li>
     <ul>
+<!-- odnośniki -->
+<a href="https://akademia108.pl">Link zewnętrzny do Akademii</a>
+<a href="#sekcja">Link do miejsca na stronie</a>
+<a href="mailto: pawel.migo@gmail.com">E-mail</a>
+<a href="podstrony/kontakt.html" target="_blank">Kontakt</a>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br><br><br><br><br><br><br><br><br><br>
+<section id="sekcja">Treść sekcji</section>
 
+<!--- Tabele-->
+<table>
+    <thead>
+        <tr>
+            <th>Produkt</th>
+            <th>Ilość</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>Kawa</td>
+            <td>3</td>
+        </tr>
+        <tr>
+            <td>Herbata </td>
+            <td>8</td>
+        </tr>
+    </tbody>
+    <tfoot>
+        <tr>
+            <td>Razem</td>
+            <td>11</td>
+        </tr>
+    </tfoot>
+</table>
+
+<!-- Formularze -->
+<form action="">
+    <label for="name">Imię</label>
+    <input type="text" name="name" id="name" placeholder="Imię">
+    <input type="email" placeholder="email" disabled><br>
+    <input type="number" name="quantity" value="2"><br>
+    <input type="checkbox" name="agreement" id="agreement"> 
+    <label for="agreement">Whyrażam zgodę na...</label>
+    <br>
+    <label><input type="radio" name="gender">Kobieta</label> <br>
+    <label><input type="radio" name="gender">Mężczyzna</label>
+<br>
+
+<select name="cities">
+    <option value="warszawa">Warszawa</option>
+    <option value="gdansk">Gdańsk</option>
+    <option value="krakow">Kraków</option>
+</select>
+<br>
+<textarea name="message" placeholder="Co Cię trapi"></textarea><br>
+<br>
+    <input type="submit" value="Wyślij formularz">
+
+    </form>
+
+    <br>
+    <br>
+    <br>
+ 
 
 </body>
 </html>
