--- a/warsztaty/formularz-html/index.html
+++ b/warsztaty/formularz-html/index.html
@@ -6,13 +6,16 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="">
+    <form action="https://formspree.io/pawel.migo@gmail.com">
         <label for="name">Imię i nazwisko</label>
-        <input type="text" name="name" placeholder="Imię i nazwisko"><br>
-        <input type="email" placeholder="email" disabled><br>
+        <input type="text" name="name" placeholder="Imię i nazwisko"><br><br>
+        <label for="e-mail">Email</label>
+        <input type="email"><br><br>
+        <label for="tel">Numer telefonu</label>
         <input type="tel" name="tel"><br>
         <br>
-        <textarea name="message" placeholder="Co Cię trapi"></textarea><br>
+        <label for="message">Wiadomość</label>
+        <textarea name="message" placeholder="Wstaw swój komentarz"></textarea><br><br>
         <input type="submit" value="Wyślij formularz">
 
 
