--- a/warsztaty/formularz-html/index.html
+++ b/warsztaty/formularz-html/index.html
@@ -15,7 +15,7 @@
         <input type="tel" name="tel"><br>
         <br>
         <label for="message">Wiadomość</label>
-        <textarea name="message" placeholder="Wstaw swój komentarz"></textarea><br><br>
+        <textarea name="message" placeholder="Wstaw swój komentarz w tym polu"></textarea><br><br>
         <input type="submit" value="Wyślij formularz">
 
 
