--- a/warsztaty/formularz-html/index.html
+++ b/warsztaty/formularz-html/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="https://formspree.io/pawel.migo@gmail.com">
+    <form action="https://formspree.io/pawel.migo@gmail.com" method="post">
         <label for="name">Imię i nazwisko</label>
         <input type="text" name="name" placeholder="Imię i nazwisko"><br><br>
         <label for="e-mail">Email</label>
