--- a/warsztaty/formularz-html/index.html
+++ b/warsztaty/formularz-html/index.html
@@ -9,7 +9,7 @@
     <form action="https://formspree.io/pawel.migo@gmail.com" method="post">
         <label for="name">Imię i nazwisko</label>
         <input type="text" name="name" placeholder="Imię i nazwisko"><br><br>
-        <label for="e-mail">Email</label>
+        <label for="email">Email</label>
         <input type="email"><br><br>
         <label for="tel">Numer telefonu</label>
         <input type="tel" name="tel"><br>
