--- a/HTML5/index-2.html
+++ b/HTML5/index-2.html
@@ -101,6 +101,10 @@
     <br>
  <!-- Iframe and video -->
  <iframe width="560" height="315" src="https://www.youtube.com/embed/yHvFL92RXP4" frameborder="0" allowfullscreen></iframe>
-
+<br>
+<video width="320" height="240" controls>
+    <source src="movie.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+  </video>
 </body>
 </html>
