--- a/HTML5/index-2.html
+++ b/HTML5/index-2.html
@@ -106,5 +106,10 @@
     <source src="movie.mp4" type="video/mp4">
   Your browser does not support the video tag.
   </video>
+
+  <br>
+  <br>
+  <!-- SVH -->
+  <path d="wstaw tu svg"></path>
 </body>
 </html>
