--- a/warsztaty/html5-poprawka/projekt-do-poprawy/index.html
+++ b/warsztaty/html5-poprawka/projekt-do-poprawy/index.html
@@ -35,7 +35,7 @@
 
   <footer id="contact">
     <h2 id="contact-header">Kontakt</h2>
-    <liaddress id="contact-content">
+    <address id="contact-content">
       Łukasz Badocha<br /> 
       ul. Mostowa 6/13<br /> 
       31-061 Kraków<br />
