--- a/zadania-domowe/zadanie2/index.html
+++ b/zadania-domowe/zadanie2/index.html
@@ -1,11 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Formularz dla uczestnika szkolenia</title>
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
-    <p>Zadanie 2</p>
+    <form action="https://formspree.io/mdogybjb" method="POST">
+        <label for="name">Imię</label>
+        <input type="text" name="name" id="name"><br>
+
+        <label for="surname">Nazwisko</label>
+        <input type="text" name="surname" id="surname"><br>
+
+        <label for="email">Mail</label>
+        <input type="email" name="email" id="email"><br>
+
+        <label for="phone">Telefon</label>
+        <input type="tel" name="phone" id="phone"><br><br>
+
+        <label for="city">Wybór miasta</label>
+        <select name="city" id="city">
+            <option value="krakow">Kraków</option>
+            <option value="warszawa">Warszawa</option>
+            <option value="gdansk">Gdańsk</option>
+        </select>
+
+        <p>Wybierz płeć:</p>
+        <input type="radio" name="gender" value="male" id="male">
+        <label for="male">Mężczyzna</label>
+
+        <input type="radio" name="gender" value="female" id="female">
+        <label for="female">Kobieta</label><br>
+
+        <input type="checkbox" id="agreement" name="agreement">
+        <label for="agreement">Wyrażam zgodę na przetwarzanie moich danych osobowych.</label><br>
+
+        <label for="message">Wiadomość:</label>
+        <textarea name="message" id="message" cols="50" rows="10"></textarea>
+    <br>
+
+        <input type="submit" value="Wyślij">     
+
+
+
+    </form>
 </body>
 </html>
