--- a/zadania-domowe/zadanie3/index.html
+++ b/zadania-domowe/zadanie3/index.html
@@ -3,9 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Zadanie 3 - Kwadraty i koła.</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <p>Zadanie 3</p>
+    <div class="container">
+        <div class="box1">
+            <div class='circle1'></div>
+        </div>
+        <div class="box2">
+            <div class='circle2'></div>
+        </div>
+        <div class="box3">
+            <div class='circle3'></div>
+        </div>
+        <div class="box4">
+            <div class='circle4'></div>
+        </div>
+        <div class="box5">
+            <div class='circle5'></div>
+        </div>
+        <div class="box6">
+            <div class='circle6'></div>
+        </div>
+        <div class="box7">
+            <div class='circle7'></div>
+        </div>
+        <div class="box8">
+            <div class='circle8'></div>
+        </div>
+        <div class="box9">
+            <div class='circle9'></div>
+        </div>
+    </div>
 </body>
 </html>
